--- a/At uni/card practise/index.css
+++ b/At uni/card practise/index.css
@@ -17,6 +17,8 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 50px;
+    padding: 20px;
     /* align-items: center; */
 }
 
@@ -54,7 +56,7 @@ body {
 
 .button:hover {
    background-color: aqua;
-   border-radius: 5px;
+   border-radius: 10px;
    border: 3px solid black;
    transition: 0.3s;
    border: none;
