--- a/At uni/card/style.css
+++ b/At uni/card/style.css
@@ -14,11 +14,11 @@ body{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     background-color: purple;
     /* margin: 250px; */
-    gap: 20px;
+    gap: 10px;
     /* padding: 5px; */
     width: 90%;
     height: 100%;
@@ -64,6 +64,7 @@ body{
     height: 100px;
     border-radius: 50%;
     border: 3px solid purple;
+    overflow: hidden;
 }
 
 .second img {
@@ -81,18 +82,41 @@ body{
 }
 
 
-button {
-    border: none;
+.subscribe {
+    border: 2px solid purple;
+    background-color: purple;
+    color: white;
     padding: 10px;
+    width: 100px;
     margin: 5px;
     border-radius: 5px;
     cursor: pointer;
+    transition: 0.3s;
+}
+
+
+.read_more {
+    padding: 10px;
+    width: 100px;
+    margin: 5px;
+    border-radius: 5px;
+    border: 2px solid purple;
+    cursor: pointer;
+    transition: 0.3s    ;
+}
+
+
+.subscribe:hover {
+    background-color: blueviolet;
+    transition: 0.3s;
 }
 
 .read_more:hover {
-    border: 3px;
-    
+    background-color: plum;
+    transition: 0.3s;
 }
+
+
 
 
 
