--- a/Homework/hometask_card/style.css
+++ b/Homework/hometask_card/style.css
@@ -1,74 +1,95 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-align: center;
 }
-.container {
+
+#upper {
     display: flex;
-    flex-direction: column;
-    width: 300px;
-    height: 350px;
-    padding: 20px;
-    justify-content: space-between;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    background-color: white;
-
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
-
-.img img {
-    width: 120px; 
-    height: 120px; 
-    border-radius: 50%;
-    border: 3px solid purple; 
-    object-fit: cover; 
-    display: block;
-    margin: 0 auto; 
-}
-
-.header h4 {
-    margin-top: 10px;
-    font-size: 18px;
-}
-
-.content p {
-    font-size: 14px;
-    color: #555;
-    padding-bottom: 10px;
-}
-
-
-button {
-    border: 1px solid purple;
-    border-radius: 5px;
-    width: 100px;
-    height: 30px;
-    
-}
-
-.read_more {
-    color: purple;
-}
-
-
-.subscribe {
-    background-color: purple;
-    color: white;
-}
-
 
 .main {
     display: flex;
-    justify-content: space-around;
-    padding: 350px; 
-    margin: 20px;
-    height: 100vh;
-    /* background-size: cover;
-    background-color: purple; */
-}  
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: purple;
+    width: 1300px;
+    height: 500px;
+    align-items: center;
+}
+
+
+img {
+    width: 190px;
+    height: 190px;
+    border-radius: 50%;
+    margin: 20px; 
+    border: 2px purple solid;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 430px;
+    background-color: white;
+}
+
+.header {
+    padding-bottom: 3px;
+    color: purple;
+}
+
+.content {
+    padding: 10px;
+}
 
 
 
+.buttons {
+    display: flex;
+    justify-content: space-evenly;
+    width: 250px;
+    height: 150px;
+    padding-top: 10px;
+    gap: 10px;
+}
+
+button {
+    height: 30px;
+    width: 500px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.read_more:hover {
+    background-color: purple;
+    color: white;
+    transition: .3s;
+}
+
+.subscribe:hover {
+    background-color: white;
+    color: purple;
+    transition: .3s;
+}
 
 
+
+.read_more {
+    color: purple;
+    border: 2px purple solid;
+    border-radius: 10px;
+}
+
+.subscribe {
+    color: white;
+    background-color: purple;
+    border-radius: 10px;
+}
