--- a/Homework/hometask_card/style.css
+++ b/Homework/hometask_card/style.css
@@ -27,6 +27,7 @@ img {
     width: 190px;
     height: 190px;
     border-radius: 50%;
+    object-fit: cover;
     margin: 20px; 
     border: 2px purple solid;
 }
