--- a/Homework/chat window hometask/style.css
+++ b/Homework/chat window hometask/style.css
@@ -114,8 +114,8 @@
     border-radius: 10px;
     padding: 5px;
     width: 60%;
-    color: white;
-    background-color: rgb(95, 95, 95);
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     text-align: left;
   }
 }
@@ -131,8 +131,8 @@
     border-radius: 10px;
     padding: 5px;
     width: 30%;
-    color: white;
-    background-color: rgb(95, 95, 95);
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     text-align: center;
   }
 }
