--- a/Homework/chat window hometask/style.css
+++ b/Homework/chat window hometask/style.css
@@ -155,14 +155,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  input {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    padding: 5px;
-    background-color: gray;
-  }
+    input {
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      padding: 5px;
+      background-color: rgb(0, 0, 0); 
+      color: white; 
+    }
 }
+
+input::placeholder {
+  color: white;
+}
+
+
 
 .send {
   width: 30px;
@@ -170,13 +177,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  span {
-    font-size: 14px;
-    font-weight: 600;
-    border: 1px solid rgb(255, 255, 255);
-    border-radius: 10px;
-    padding: 5px;
-    color: white;
-    background-color: gray;
+  
+    button {
+      font-size: 14px;
+      font-weight: 600;
+      border: 1px solid rgb(255, 255, 255);
+      border-radius: 7px;
+      padding: 5px;
+      color: white;
+      background-color: gray;
+      transition: .3s;
   }
+}
+
+
+button:hover {
+  background-color: black;
+  transition: .3s;
 }
