--- a/Homework/sass practise 2/style.scss
+++ b/Homework/sass practise 2/style.scss
@@ -10,6 +10,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .section_1 {
@@ -26,6 +27,8 @@
   align-items: center;
   gap: 20%;
   background-color: white;
+  position: sticky;
+  top: 0;
 
   .brand {
     display: flex;
@@ -143,6 +146,8 @@
   }
 }
 
+
+
 .section_2 {
   width: 100%;
 }
@@ -152,12 +157,12 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 644.17px;
+  // height: 644.17px;
   padding: 96px;
 
   .content_2 {
-    width: 1170px;
-    height: 452px;
+    width: 100%;
+    // height: 452px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -167,8 +172,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 682px;
-      height: 452px;
+      width: 40%;
+      // height: 452px;
+      padding: 0px 15px;
       img {
         width: 100%;
         height: auto;
@@ -182,40 +188,619 @@
       flex-direction: column;
       width: 390px;
       height: 311px;
-      gap: 25px;
+      gap: 20px;
       font-family: "Raleway";
       position: relative;
+      margin: 0px 0px 0px 97.5px;
+      padding: 0px 15px;
 
-        .seo_friendly {
-          width: 100%;
-          height: 33px;
-            h3 {
-              font-size: 30px;
-              font-weight: 400;
-            }
+      .seo_friendly {
+        width: 100%;
+        height: 33px;
+        h3 {
+          font-size: 30px;
+          font-weight: 400;
+        }
+      }
+
+      .p_2 {
+        width: 100%;
+        height: 144px;
+        p {
+          font-size: 14px;
+          font-weight: 400;
+          letter-spacing: 2px;
+          color: #8c979e;
+        }
+      }
+
+      .btn_2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 200px;
+        height: 54px;
+        background-color: #745cf9;
+        color: white;
+        transition: 0.5s;
+        cursor: pointer;
+
+        span {
+          font-size: 12px;
         }
 
-        .p2 {
-          width: 100%;
-          height: 144px;
-            p {
-              font-size: 14px;
-              font-weight: 400;
-            }
+        &:hover {
+          background-color: #5242b3;
+          transition: 0.5s;
         }
-
-        .btn_2 {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 200px;
-          height: 54px;
-          // position: absolute;
-          // top: 260px;
-          // left: -0.1px;
-          background-color: #745cf9;
-          color: white;
-        }
+      }
     }
   }
 }
+
+.section_3 {
+  width: 100%;
+}
+
+.main_3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  // height: 644.17px;
+  padding: 96px;
+  background-color: #f5f5f5;
+
+  .content_3 {
+    width: 100%;
+    // height: 452.17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Raleway";
+
+    .left_3 {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      flex-direction: column;
+      gap: 20px;
+      width: 390px;
+      height: 263px;
+      padding: 0px 15px;
+
+      .portfolio_section {
+        width: 100%;
+        height: 33px;
+        margin: 0px 0px 24px;
+        font-size: 30px;
+        font-weight: 400;
+      }
+
+      .p_3 {
+        width: 100%;
+        height: 96px;
+        margin: 0px 0px 24px;
+        font-size: 14px;
+        color: #8c979e;
+        letter-spacing: 2px;
+      }
+
+      .btn_3 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 200px;
+        height: 54px;
+        margin: 0px 0px 24px;
+        padding: 13px 26px;
+        background-color: #745cf9;
+        color: white;
+        transition: 0.5s;
+        cursor: pointer;
+        span {
+          font-size: 12px;
+        }
+
+        &:hover {
+          transition: 0.5s;
+          background-color: #5242b3;
+        }
+      }
+    }
+
+    .mac_img_3 {
+      width: 40%;
+      // height: 457.17px;
+      margin: 0px 0px 0px 97.5px;
+      padding: 0px 15px;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+  }
+}
+
+.section_4 {
+  width: 100%;
+}
+
+.main_4 {
+  width: 100%;
+  // height: 438px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 96px 0px;
+  background-image: url(https://149842022.v2.pressablecdn.com/wp-content/uploads/sites/59/2016/12/photo-1452723312111-3a7d0db0e024.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  font-family: "Raleway";
+
+  .content_4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    // height: 246px;
+    padding: 0px 15px;
+
+    .center_text_4 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      .smallparallaxsec {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 35px;
+        width: 1260px;
+        height: 64px;
+        margin: 0px 0px 24px;
+      }
+
+      .p_4 {
+        width: 1260px;
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        text-align: center;
+        margin: 0px 0px 24px;
+        font-size: 14px;
+        font-weight: 400;
+      }
+
+      .btn_4 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        width: 200px;
+        height: 54px;
+        background-color: #745cf9;
+        transition: 0.5s;
+        cursor: pointer;
+        margin: 0px 0px 24px;
+        padding: 13px 26px;
+        font-size: 12px;
+
+        &:hover {
+          transition: 0.5s;
+          background-color: #5242b3;
+        }
+      }
+    }
+  }
+}
+
+.section_5 {
+  width: 100%;
+}
+
+.main_5 {
+  width: 100%;
+  padding: 96px 0px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Raleway";
+  background-color: #f5f5f5;
+
+  .content_5 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+
+    .img_box {
+      width: 60%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+        
+        img {
+          width: 100%;
+        }
+    }
+
+
+    .text_box_5 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 50%;
+
+      .limitless_opt {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 33px;
+        margin: 0px 0px 24px;
+        font-size: 30px;
+      }
+
+      .p_5 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 48px;
+        margin: 0px 0px 24px;
+        color: #8c979e;
+        text-align: center;
+      }
+      .btn_5 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 200px;
+        height: 54px;
+        margin: 0px 0px 24px;
+        padding: 13px 26px;
+        background-color: #745cf9;
+        color: white;
+        font-size: 12px;
+        transition: 0.5s;
+        cursor: pointer;
+
+        &:hover {
+          transition: 0.5s;
+          background-color: #5242b3;
+        }
+      }
+    }
+  }
+}
+
+.section_6 {
+  width: 100%;
+  background-color: black;
+}
+
+.main_6 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  padding: 96px 0px 0px;
+  color: white;
+  font-family: "Raleway";
+
+  .text_box_6 {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0px 15px;
+
+    .ourlatestpr {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      margin: 0px 0px 32px;
+      font-size: 30px;
+    }
+
+    .p_6 {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0px 0px 40px;
+      font-size: 14px;
+    }
+  }
+
+  //   .grid-box {
+  //     display: flex;
+  //     flex-wrap: wrap;
+  //     // gap: 10px;
+  //     width: 100%;
+  //     justify-content: center;
+  // }
+  //   .image {
+  //       flex: 1 1 calc(25% - 10px);
+  //       max-width: calc(25% - 10px);
+  //   }
+  //   .image img {
+  //       width: 100%;
+  //       height: 100%;
+  //       object-fit: cover;
+  //   }
+
+  .grid-box {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, auto);
+  }
+
+  .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.section_7 {
+  width: 100%;
+}
+
+.main_7 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(https://149842022.v2.pressablecdn.com/wp-content/uploads/sites/59/2016/12/photo-1451417379553-15d8e8f49cde.jpg);
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: "Raleway";
+
+  .content_7 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .text_box_7 {
+      padding-top: 70px;
+      width: 1170px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 20px;
+
+      .whatourcustumers {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 70%;
+        margin: 0px 0px 24px;
+        font-size: 30px;
+        color: white;
+      }
+
+      .p_7 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 70%;
+        font-size: 14px;
+        margin: 0px 0px 24px;
+        color: white;
+        text-align: center;
+      }
+
+      .profile_7 {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        .img_7 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100px;
+          height: 100px;
+          border-radius: 50%;
+          overflow: hidden;
+          margin: 0px 0px 16px;
+          img {
+            width: 100%;
+          }
+        }
+
+        .footer_7 {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          color: white;
+          margin-bottom: 40px;
+        }
+      }
+    }
+  }
+}
+
+.section_8 {
+  width: 100%;
+}
+
+.main_8 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 96px 0px;
+  font-family: "Raleway";
+
+  .content_8 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .ourmainclients {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0px 0px 64px;
+      font-size: 30px;
+    }
+
+    .icon_box_8 {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .icons {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        font-size: 60px;
+        // gap: 20px;
+
+        .html_8 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 15%;
+          color: #e54d26;
+        }
+
+        .css_8 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 15%;
+          color: #016fba;
+        }
+
+        .sass_8 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 15%;
+          color: #563e7d;
+        }
+
+        .facebook_8 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 15%;
+          color: #3c5a99;
+        }
+      }
+    }
+  }
+}
+
+.section_9 {
+  width: 100%;
+}
+
+.main_9 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 96px 0px;
+  font-family: "Raleway";
+  background-color: #f5f5f5;
+
+  .content_9 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+
+    .doyoulike {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0px 15px;
+      width: 50%;
+      font-size: 25px;
+    }
+
+    .btn_9 {
+      width: 262.5px;
+      height: 54px;
+      background-color: #745cf9;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0px 15px;
+      cursor: pointer;
+      transition: 0.5s;
+
+      &:hover {
+        transition: 0.5s;
+        background-color: #5242b3;
+      }
+    }
+  }
+}
+
+.main_10 {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 72px 0px;
+  background-color: black;
+  font-family: "Raleway";
+
+  .content_10 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .theme_by_colorlib {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding-right: 700px;
+  }
+}
+
+@media screen and (min-width:320px) and (max-width:768px) {
+
+  
+
+
+}
+
+
