--- a/Homework/sass practise 2/style.scss
+++ b/Homework/sass practise 2/style.scss
@@ -55,8 +55,8 @@
     position: relative;
 
     .search {
-      position: absolute;
-      left: 540px;
+      // position: absolute;
+      // left: 540px;
       cursor: pointer;
       font-size: 16px;
     }
@@ -158,7 +158,7 @@
   align-items: center;
   width: 100%;
   // height: 644.17px;
-  padding: 96px;
+  padding: 96px 0px 0px ;
 
   .content_2 {
     width: 100%;
@@ -186,17 +186,17 @@
       justify-content: center;
       align-items: flex-start;
       flex-direction: column;
-      width: 390px;
-      height: 311px;
-      gap: 20px;
+      width: 30%;
+      // height: 311px;
+      gap: 30px;
       font-family: "Raleway";
       position: relative;
-      margin: 0px 0px 0px 97.5px;
-      padding: 0px 15px;
+      // margin: 0px 0px 0px 97.5px;
+      // padding: 0px 15px;
 
       .seo_friendly {
         width: 100%;
-        height: 33px;
+        // height: 33px;
         h3 {
           font-size: 30px;
           font-weight: 400;
@@ -205,7 +205,7 @@
 
       .p_2 {
         width: 100%;
-        height: 144px;
+        // height: 144px;
         p {
           font-size: 14px;
           font-weight: 400;
@@ -265,13 +265,15 @@
       align-items: flex-start;
       flex-direction: column;
       gap: 20px;
-      width: 390px;
-      height: 263px;
+      width: 25%;
+      // height: 263px;
       padding: 0px 15px;
 
       .portfolio_section {
+        display: flex;
+        align-items: flex-start;
         width: 100%;
-        height: 33px;
+        // height: 33px;
         margin: 0px 0px 24px;
         font-size: 30px;
         font-weight: 400;
@@ -279,7 +281,7 @@
 
       .p_3 {
         width: 100%;
-        height: 96px;
+        // height: 96px;
         margin: 0px 0px 24px;
         font-size: 14px;
         color: #8c979e;
@@ -350,6 +352,7 @@
     padding: 0px 15px;
 
     .center_text_4 {
+      width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -361,14 +364,14 @@
         align-items: center;
         color: white;
         font-size: 35px;
-        width: 1260px;
-        height: 64px;
+        width: 80%;
+        // height: 64px;
         margin: 0px 0px 24px;
       }
 
       .p_4 {
-        width: 1260px;
-        height: 48px;
+        width: 50%;
+        // height: 48px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -446,7 +449,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 33px;
+        // height: 33px;
         margin: 0px 0px 24px;
         font-size: 30px;
       }
@@ -456,7 +459,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 48px;
+        // height: 48px;
         margin: 0px 0px 24px;
         color: #8c979e;
         text-align: center;
@@ -580,7 +583,7 @@
 
     .text_box_7 {
       padding-top: 70px;
-      width: 1170px;
+      width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -798,9 +801,61 @@
 
 @media screen and (min-width:320px) and (max-width:768px) {
 
+  .container .header .nav {
+    display: none;
+  }
+
   
+
+  .container .section_1 .box .center_text .buttons  {
+    
+    width: 100%;  
+
+
+  }
+
+  .container .section_2 .main_2 .content_2 {
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+        .mac_img {
+          width: 100%;
+
+            img {
+              width: 100%;
+            }
+        }
+
+        .right_2 .p_2 {
+
+          p {
+            font-size: 10px;
+          }
+        }
+
+
+  }
+
+  .container .section_2 .main_2 {
+
+    width: 100%;
+
+  }
+
+
+  .container .section_2 .main_2 .content_2 .right_2 .p_2 {
+
+    width: 100%;
+
+    p {
+      width: 100%;
+    }
 
 
 }
 
-
+}
