--- a/Homework/builder site/style.scss
+++ b/Homework/builder site/style.scss
@@ -252,9 +252,9 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          // padding: 10px;
           font-size: 20px;
           margin-bottom: 20px;
+          cursor: pointer;
         }
 
         .paragraph {
