--- a/Homework/sass practise 2/assets/css/style.css
+++ b/Homework/sass practise 2/assets/css/style.css
@@ -213,7 +213,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 96px;
+  padding: 96px 0px 0px;
   background-color: #f5f5f5;
 }
 .main_3 .content_3 {
@@ -286,7 +286,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 96px 0px;
+  padding: 96px 0px 0px;
   background-image: url(https://149842022.v2.pressablecdn.com/wp-content/uploads/sites/59/2016/12/photo-1452723312111-3a7d0db0e024.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -466,7 +466,8 @@
 .main_6 .image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .section_7 {
@@ -664,6 +665,10 @@
   background-color: #5242b3;
 }
 
+.section_10 {
+  width: 100%;
+}
+
 .main_10 {
   width: 100%;
   justify-content: center;
@@ -687,9 +692,30 @@
   padding-right: 700px;
 }
 
+.menu {
+  display: none;
+}
+
 @media screen and (min-width: 320px) and (max-width: 768px) {
   .container .header .nav {
     display: none;
+  }
+  .container .header .menu {
+    display: block;
+  }
+  .container .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .container .header .brand {
+    width: 70%;
+  }
+  .container .header .menu {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .container .section_1 .box .center_text .buttons {
     width: 100%;
@@ -703,12 +729,13 @@
   }
   .container .section_2 .main_2 .content_2 .mac_img {
     width: 100%;
+    padding: 0;
   }
   .container .section_2 .main_2 .content_2 .mac_img img {
     width: 100%;
   }
   .container .section_2 .main_2 .content_2 .right_2 .p_2 p {
-    font-size: 10px;
+    font-size: 12px;
   }
   .container .section_2 .main_2 {
     width: 100%;
@@ -719,4 +746,119 @@
   .container .section_2 .main_2 .content_2 .right_2 .p_2 p {
     width: 100%;
   }
-}/*# sourceMappingURL=style.css.map */
+  .container .section_2 .main_2 .content_2 .right_2 {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .container .section_2 .main_2 .content_2 .right_2 .seo_friendly {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .section_10 .main_10 .content_10 .theme_by_colorlib {
+    width: 80%;
+    padding: 0;
+    font-size: 12px;
+  }
+  .section_3 .main_3 .content_3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+  .section_3 .main_3 .content_3 .left_3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    padding: 0;
+    text-align: center;
+  }
+  .section_3 .main_3 .content_3 .left_3 .portfolio_section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+  }
+  .section_3 .main_3 .content_3 .mac_img_3 {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+  .section_3 .main_3 .content_3 .mac_img_3 img {
+    width: 100%;
+    height: auto;
+  }
+  .section_4 .main_4 .content_4 .smallparallaxsec {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    width: 100%;
+  }
+  .section_4 .main_4 .content_4 .p_4 {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .section_5 .main_5 .content_5 .text_box_5 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 80%;
+  }
+  .section_5 .main_5 .content_5 .img_box {
+    width: 90%;
+  }
+  .section_5 .main_5 .content_5 .img_box img {
+    width: 100%;
+    height: auto;
+  }
+  .section_6 .main_6 .text_box_6 {
+    width: 90%;
+  }
+  .section_6 .main_6 .text_box_6 .ourlatestpr {
+    text-align: center;
+    font-size: 24px;
+  }
+  .section_6 .main_6 .text_box_6 .p_6 {
+    text-align: center;
+  }
+  .section_7 .main_7 .content_7 .text_box_7 {
+    text-align: center;
+  }
+  .section_7 .main_7 .content_7 .text_box_7 .whatourcustumers, .section_7 .main_7 .content_7 .text_box_7 .p_7 {
+    width: 90%;
+  }
+  .section_7 .main_7 .content_7 .text_box_7 .whatourcustumers {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+  }
+  .section_8 .main_8 .content_8 .icons {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+  .section_9 .main_9 .content_9 {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .section_9 .main_9 .content_9 .doyoulike {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 16px;
+  }
+}
