--- a/Homework/n11/assets/css/style.css
+++ b/Homework/n11/assets/css/style.css
@@ -1408,6 +1408,7 @@
     overflow-x: auto;
     white-space: nowrap;
     width: 100%;
+    scrollbar-width: none;
   }
   .container .section_1 .shortcut_box .shortcuts ::-webkit-scrollbar {
     display: none;
@@ -1441,6 +1442,7 @@
     overflow-x: auto;
     white-space: nowrap;
     width: 100%;
+    scrollbar-width: none;
   }
   .container .section_1 .product_box .cards ::-webkit-scrollbar {
     display: none;
@@ -1465,10 +1467,10 @@
     font-size: 10px;
   }
   .container .section_1 .product_box .cards .card .description .price {
-    margin-top: 10px;
+    margin-top: 5px;
   }
   .container .section_1 .product_box .cards .card .description .price ins {
-    font-size: 16px;
+    font-size: 14px;
   }
   .container .section_1 .product_box .cards .card .description .price span {
     font-size: 11px;
@@ -1532,7 +1534,7 @@
     margin-top: 240px;
     background: #d4be9c;
     width: 100%;
-    padding: 5px;
+    padding: 0px 5px 5px 5px;
     justify-content: space-between;
     gap: 10px;
   }
@@ -1564,10 +1566,10 @@
     width: 100%;
   }
   .container .section_1 .promo_con_2 .promo_area .right .cards {
-    margin-top: 240px;
+    margin-top: 275px;
     background: #597482;
     width: 100%;
-    padding: 5px;
+    padding: 0px 5px 5px 5px;
     justify-content: space-between;
     gap: 10px;
   }
